2001-05-24  Sam Steingold  <sds@gnu.org>

	hostname resolution is now optional in
	SOCKET-STREAM-PEER and SOCKET-STREAM-LOCAL.
	* stream.d (host_data_fetcher): accept an additional boolean argument.
	(publish_host_data): pass `resolve_p' to func
	(SOCKET-STREAM-PEER, SOCKET-STREAM-LOCAL): 1 optional argument
	* subr.d: ditto
	* socket.d (socket_getlocalname, socket_getpeername): accept an
	additional `resolve_p' argument.

2001-05-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib): pack in the build directory.

2001-05-23  Sam Steingold  <sds@gnu.org>

	* version.h: 2.26 is released

2001-05-21  Bruno Haible  <haible@clisp.cons.org>

	* lispbibl.d (dfloat): ARM saves the doubles as two little-endian
	words, in big-endian order. Reported by Richard Kreckel.

2001-05-21  Bruno Haible  <haible@clisp.cons.org>

	* ariarm.d: Use #0x instead of #& to designate hexadecimal constants.

2001-05-15  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.lisp: use DEFPACKAGE to define XLIB;
	 import SYS::CONCAT-STRINGS
	* modules/clx/new-clx/demos/clx-demos.lisp: load/compile
	 sokoban.lisp only when the package XPM is present

2001-05-14  Sam Steingold  <sds@gnu.org>

	* constobj.d (current_language): use the package prefix I18N

2001-05-14  Sam Steingold  <sds@gnu.org>

	* defs2.lisp (with-standard-io-syntax): finish the 2000-12-12
	patch - bind *PRINT-RPARS* and *PRINT-INDENT-LISTS* appropriately

2001-05-12  Sam Steingold  <sds@gnu.org>

	* pathname.d (pslashp, lslashp, Z_AT_SLASH, Z_SHIFT): new macros
	(parse_as_logical): new helper function
	(logical_pathname, merge_pathnames): use it
	(merge_pathnames): new macros SPECIFIED, NAMETYPE_MATCH, and
	 VERSION_MATCH; changed the previous patch: re-parse pathname
	 as logical when the default is logical
	(make_pathname): do not translate :name :wild to :name "*"
	(has_wildcards): replaced with wild_p() which handles :WILD
	(has_word_wildcards): ditto with word_wild_p()
	(has_*_wildcards): simplified accordingly
